--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "discord.js": "^8.1.0",
     "lodash": "^4.15.0",
+    "minimist": "^1.2.0",
     "nedb": "^1.8.0",
     "rxjs": "^5.0.0-beta.11"
   }
