--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "slave-bot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Self-hosted extensible discord bot",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "tsc": "node_modules/.bin/tsc -p .",
     "tsc:watch": "npm run tsc -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "start:watch": "node_modules/.bin/nodemon --watch dist dist/index.js"
+    "start": "node dist/main.js",
+    "start:watch": "node_modules/.bin/nodemon --watch dist dist/main.js",
+    "typings": "node_modules/.bin/typings",
+    "prepublish": "npm run tsc"
   },
   "repository": {
     "type": "git",
@@ -30,7 +32,8 @@
   "homepage": "https://github.com/fknop/slave-bot#readme",
   "devDependencies": {
     "nodemon": "^1.10.2",
-    "typescript": "^2.0.0"
+    "typescript": "^2.0.0",
+    "typings": "^1.3.3"
   },
   "dependencies": {
     "discord.js": "^8.1.0",
