--- a/package.json
+++ b/package.json
@@ -31,15 +31,17 @@
   },
   "homepage": "https://github.com/fknop/slave-bot#readme",
   "devDependencies": {
+    "@types/core-js": "^0.9.35",
+    "@types/nedb": "0.0.31",
+    "@types/node": "0.0.2",
     "nodemon": "^1.10.2",
-    "typescript": "^2.0.0",
-    "typings": "^1.3.3"
+    "typescript": "^2.0.10"
   },
   "dependencies": {
-    "discord.js": "^8.1.0",
+    "discord.js": "^10.0.1",
     "lodash": "^4.15.0",
     "minimist": "^1.2.0",
     "nedb": "^1.8.0",
-    "rxjs": "^5.0.0-beta.11"
+    "rxjs": "^5.0.0-rc.4"
   }
 }
