--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "tsc": "node_modules/.bin/tsc -p .",
     "tsc:watch": "npm run tsc -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/main.js",
-    "start:watch": "node_modules/.bin/nodemon --watch dist dist/main.js",
+    "start": "node bin/index.js",
+    "start:watch": "node_modules/.bin/nodemon --watch dist bin/index.js",
     "prepublish": "npm run tsc"
   },
   "repository": {
